# pchain-client-cli

./: Cargo.toml  README.md
.github/workflows/: release.yml
example/: arguments.json  config.toml
src/: command.rs  config.rs  display_msg.rs  keypair.rs  main.rs  parser.rs  result.rs  utils.rs
src/display_types/: account.rs  block.rs  consensus.rs  mod.rs  receipts.rs  stake.rs  transaction.rs  tx_commands.rs
src/sub_commands/: config_command.rs  keys.rs  mod.rs  parse.rs  query.rs  transaction.rs
tests/: config.rs  keys.rs  parse.rs
tests/cli_home/: hash
tests/common/: mod.rs
