[package]
name = "pchain-client-cli"
version = "0.4.1"
authors = ["ParallelChain Lab <info@parallelchain.io>"]
edition = "2018"
description = "pchain-client-cli: ParallelChain F Client CLI."
license = "Apache-2.0"

[[bin]]
name = "pchain_client"
path = "src/main.rs"

[dependencies]
bytes = "1.1"
clap = {version = "3.2.23", features = ["derive"]}
display_json = "0.2.1"
dunce = "1.0.2"
home = "0.5"
pchain-client-rs = { path = "../rust" }
pchain-types = { path = "../../types/rust" }
regex = "1.5"
rust-format = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
tokio = {version = "1", features = ["full"]}
toml = "0.5"
hotstuff_rs = { git = "https://github.com/parallelchain-io/hotstuff_rs" }
rust-argon2 = "1.0"
rpassword = "7.2"
age = "0.9"

# It still uses old version of rand(v0.7). 
ed25519-dalek = "1.0.1"
# ed25519-dalek requires rand(v0.7)
rand = "0.7"
# rand_chacha requires rand (v0.7) to operate
rand_chacha = "0.2"
