[package]
name = "pchain-client-cli"
version = "0.5.0"
authors = ["ParallelChain Lab <info@parallelchain.io>"]
edition = "2018"
description = "pchain-client-cli: ParallelChain F Client CLI."
license = "Apache-2.0"

[[bin]]
name = "pchain_client"
path = "src/main.rs"

[dependencies]
bytes = "1.1"
clap = {version = "3.2.23", features = ["derive"]}
display_json = "0.2.1"
dunce = "1.0.2"
ed25519-dalek = "2.0.0"
home = "0.5"
base64url = "0.1.0"
pchain-client = { git = "https://github.com/parallelchain-io/pchain-client-rust", branch = "protocol_v0.5"}
pchain-types = { git = "https://github.com/parallelchain-io/pchain-types-rust" }
hotstuff_rs = { git = "https://github.com/parallelchain-io/hotstuff_rs" }
regex = "1.5"
rust-format = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde-big-array = "0.5"
tokio = {version = "1", features = ["full"]}
toml = "0.5"
rand = "0.8.5"
rand_chacha = "0.3.1"
rust-argon2 = "1.0"
rpassword = "7.2"
age = "0.9"
borsh = "=0.10.2"
sha2 = "0.10"

[dev-dependencies]
temp-dir = "0.1.11"
serial_test = "2.0.0"
